Multi layout router added

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,6 +26,7 @@
                 </div>
 
                 <form>
+                    <h5>Employee Sign In</h5>
                   <!-- Email input -->
                   <div class="form-outline mb-4">
                     <label class="form-label" for="form3Example3">Email address</label>
@@ -39,11 +40,17 @@
                   </div>
   
                   <!-- Checkbox -->
-                  <div class="form-check d-flex mb-4">
+                  <!-- <div class="form-check d-flex mb-4">
                     <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
                     <label class="form-check-label" for="form2Example33">
                       Remember Password
                     </label>
+                  </div> -->
+
+                  <div class="form-check d-flex mb-4">
+                    <a href="/forget-password" class="form-check-label" for="form2Example33">
+                      Forget Password?
+                    </a>
                   </div>
   
                   <!-- Submit button -->
