--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -21,32 +21,34 @@
             <div class="card">
               <div class="card-body py-5 px-md-5">
                 <form>
+
+                    <h5>Create Your Account</h5>
                   <!-- 2 column grid layout with text inputs for the first and last names -->
                   <div class="row">
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <input type="text" id="form3Example1" class="form-control" />
                         <label class="form-label" for="form3Example1">First name</label>
+                        <input type="text" id="form3Example1" class="form-control" />
                       </div>
                     </div>
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <input type="text" id="form3Example2" class="form-control" />
                         <label class="form-label" for="form3Example2">Last name</label>
+                        <input type="text" id="form3Example2" class="form-control" />
                       </div>
                     </div>
                   </div>
   
                   <!-- Email input -->
                   <div class="form-outline mb-4">
-                    <input type="email" id="form3Example3" class="form-control" />
                     <label class="form-label" for="form3Example3">Email address</label>
+                    <input type="email" id="form3Example3" class="form-control" />
                   </div>
   
                   <!-- Password input -->
                   <div class="form-outline mb-4">
-                    <input type="password" id="form3Example4" class="form-control" />
                     <label class="form-label" for="form3Example4">Password</label>
+                    <input type="password" id="form3Example4" class="form-control" />
                   </div>
   
                   <!-- Checkbox -->
